<resources>
    <string name="app_name">MyNews</string>
    <string name="news_title">Title Of the news</string>
    <string name="news_author">Author name</string>
    <string name="news_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="news_date">Sat 4 Aug 2018 14.34 BST</string>
    <string name="news_tag">Top News</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="no_data">NO DATA FOUND</string>
    <string name="back_exit">Click again to Exit</string>

    <string name="setting_menu_item">Settings</string>
    <string name="setting_menu_title">Setting</string>

    <!--Setting Source Prefrence-->
    <string name="setting_news_source_label">Number Of News Display</string>
    <string name="setting_news_source_key" translatable="false">sources</string>
    <string name="setting_news_source_default"></string>

    <!--Setting Language Prefrence-->
    <string name="setting_news_language_label">Select Language</string>
    <string name="setting_news_language_key" translatable="false">language</string>
    <string name="setting_news_language_default">en</string>


    <string name="setting_news_content_type_label">Select Contents</string>
    <string name="setting_news_content_type_key" translatable="false"></string>

    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>

</resources>

